# 4D-ChessEngine

./: CMakeLists.txt  Makefile  README.md
Lean Proofs/: Bijection.lean  BoundaryCount.lean  Documentation.md  KnightVectors.lean  MovegenTermination.lean  README.md  Types.lean
godot/project/: PIECES_READY.txt  bishop.tscn  king.tscn  knight.tscn  main.gd  main.tscn  pawn.tscn  piece_separator.gd  queen.tscn  rook.tscn
godot/project/chess_pieces/: all_pieces.glb
include/: board.h
include/board/: board.h  board4d.h  state.h  timeline.h  types.h
include/eval/: eval.h
include/moves/: movegen.h
include/search/: search.h
include/uci/: engine.h
include/utils/: coordinates.h.txt  zobrist.h
src/: board.cpp  main.cpp
src/board/: board.cpp  board4d.cpp  state.cpp  timeline.cpp  types.cpp
src/eval/: eval.cpp
src/moves/: movegen.cpp
src/search/: search.cpp
src/uci/: engine.cpp
src/utils/: coordinates.cpp.txt  zobrist.cpp
tests/board/: test_board.cpp  test_zobrist.cpp
tests/moves/: test_movegen.cpp
tests/search/: test_engine.cpp  test_search.cpp
